[tool.poetry]
name = "Loop"
version = "0.1.0"
description = ""
authors = ["WY OPPONG <wyoppong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.0"}
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
